# SomeSimpleRenderingAndCollision

./: .clang-format  .gitignore  CMakeLists.txt
ext/: CMakeLists.txt
ext/imgui/: cimgui.h
ext/imgui/imgui/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
shaders/: bezier.frag.hlsl  demo0.frag.hlsl
src/: LooplessSizeMove.c  collides.c  collides.h  common-stuff.c  common-stuff.h  device-mem-stuff.c  device-mem-stuff.h  font_verts.c  font_verts.h  main.c  misc_tools.h  model_gen.c  model_gen.h  polynomials.h  reflect-test.c  render-stuff.c  render-stuff.h  tryout.c  tryout.h  vectors.h  window-stuff.c  window-stuff.h
